<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="200dp"
        android:layout_height="183dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/animage"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="323dp"
        android:layout_height="54dp"
        android:fontFamily="@font/castoro"
        android:gravity="center"
        android:text="@string/youtube_music_player"
        android:textColor="#CD0A37"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="403dp"
        android:layout_height="47dp"
        android:layout_marginBottom="284dp"
        android:fontFamily="@font/actor"
        android:gravity="center"
        android:text="@string/music"
        android:paddingBottom="20dp"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>